# jira-mcp-notion-dashboard

./: .gitignore  README.md  deploy.sh  main.py  mcp-config.json  ouath_handler.py  pyproject.toml  requirements.txt  template.yaml
.aws-sam/: build.toml
