[project]
name = "jira-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.62.0",
    "boto3>=1.40.6",
    "notion-client>=2.4.0",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "requests>=2.32.4",
]
